# fluxfce-simplified

./: .gitignore  .rooignore  Current code:.py  README.md  codebase-2025-05-21.txt  codebase-2025-05-22.txt  codebase-2025-06-08.txt  codebase-2025-06-09.txt  codebase-2025-06-10.txt  codebase-2025-06-11.txt  codebase-to-txt.sh  codebase.txt  detect-backgrounds.sh  fluxfce-logo.xcf  fluxfce-temp-control.py  fluxfce.ui-unused-uninstall-glade  fluxfce_cli.py  fluxfce_deps_check.py  fluxfce_gui.py  hand-over-prompt.md  lightfx_cli.py  lightfx_gui.py  prompt.md  pyproject.toml  readme-NEW.md  readme.md  requirements_check_install.py  setup_format_lint.sh  srss.py  todo  todo.md
backup/: readme-NEW.bak.md  readme-NEW.md
debian/: .compat  .gitkeep  changelog  control  fluxfce-gui.desktop  install  postinst  prerm  rules
fluxfce_core/: __init__.py  api.py  background_manager.py  cinnamon_handler.py  config.py  desktop_handler.py  desktop_manager.py  exceptions.py  helpers.py  scheduler.py  sun.py  systemd.py  xfce.py  xfce_handler.py
fluxfce_core/assets/: timezones.json
fluxfce_core/systemd-units/: fluxfce-apply-transition@.service  fluxfce-login.service  fluxfce-resume.service  fluxfce-scheduler.service  fluxfce-scheduler.timer
