[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "UP", "B", "C90", "SIM", "TID", "RUF",
]
ignore = ["B008", "E501"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["fluxfce_core", "fluxfce_dependency_setup"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

# --- Add this new section ---
[project]
name = "fluxfce"
version = "1.0.0" # Or your desired version
description = "Simplified XFCE Theming Tool based on sunrise/sunset"
requires-python = ">=3.9"
# Dependencies will be handled by the Debian package, but this is good practice
dependencies = [
    # Gtk dependencies are system-level, not listed here
]

[project.scripts]
fluxfce = "fluxfce_cli:main"
fluxfce-gui = "fluxfce_gui:main_gui"

[tool.setuptools]
py-modules = ["fluxfce_cli", "fluxfce_gui"]

[tool.setuptools.packages.find]
# This empty table tells setuptools to automatically find all packages
# (like fluxfce_core) in the current directory.